--- a/.gitignore
+++ b/.gitignore
@@ -88,8 +88,4 @@ ENV/
 # Rope project settings
 .ropeproject
 
-.idea/BSpostprocessing.iml
-.idea/inspectionProfiles/
-.idea/misc.xml
-.idea/modules.xml
-.idea/workspace.xml
+.idea
